# html-compare

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/html_compare/: __init__.py
tests/: test_html_compare.py
